Feat: 인트로 페이지 지도 구현

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=91ef8ade37b336bf8f190a50d2f1aa5c&libraries=services,clusterer,drawing"></script>
+
+
     <title>React App</title>
   </head>
   <body>
