--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,10 +24,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<script
-			type="text/javascript"
-			src="//dapi.kakao.com/v2/maps/sdk.js?appkey=91ef8ade37b336bf8f190a50d2f1aa5c&libraries=services,clusterer,drawing"
-		></script>
 		<title>React App</title>
 	</head>
 	<body>
@@ -43,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8ecb70f487a7f7358e64c39be347fb2"></script>
 	</body>
 </html>
