--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+    crossorigin></script>
+    <script
+    src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin></script>
+    <script>var Alert = ReactBootstrap.Alert;</script>
+    
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8ecb70f487a7f7358e64c39be347fb2"></script>
 	</body>
 </html>
